@@ -79,7 +79,9 @@ subtest 'rehash()' => sub {
 
     my $expected = $header->header;
 
+    warn $header->dump;
     $header->rehash;
+    warn $header->dump;
 
     is $header->header, $expected, 'should return the same reference';
 
