@@ -1,5 +1,7 @@
 Revision history for Perl extension CGI::Header.
 
+  - [DOCUMENTATION] add header() to "INSTANCE METHODS"
+
 0.07  Nov 12th, 2012
   - [DOCUMENTATION] add "tie() INTERFACE"
 
